--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golden</title>
+    <title>Golden Studio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Muli:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="vendor/bootstrap-grid.css">
@@ -27,8 +27,49 @@
           </div>
         </div>
       </nav>
-      <div></div>>
+      <div class="splash-inner">
+        <h3>Welcome To Our Studio!</h3>
+        <h2>IT'S NICE TO MEET YOU</h2>
+        <button class="btn" type="button">TELL ME MORE</button>
+      </div>
     </header>
+
+    <section class="services">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="section-title">
+              <h4>SERVICES</h4>
+              <h5>Proin iaculis purus consequat sem cure.</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <i class="fas fa-shopping-basket"></i>
+            <h6>E-Commerce</h6>
+            <p>Proin iaculis purus consequat sem cure digni ssim.
+               Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+          </div>
+          <div class="col-md-4">
+            <i class="fas fa-tablet-alt"></i>
+            <h6>Responsive Web</h6>
+            <p>Proin iaculis purus consequat sem cure digni ssim.
+               Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+          </div>
+          <div class="col-md-4">
+            <i class="fas fa-user-lock"></i>
+            <h6>Web Security</h6>
+            <p>Proin iaculis purus consequat sem cure digni ssim.
+               Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+          </div>
+        </div>            
+      </div>
+    </section>
+
+    <section class="portfolio">
+      
+    </section>
     
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
