Add rest of html structure

--- a/index.html
+++ b/index.html
@@ -68,9 +68,109 @@
     </section>
 
     <section class="portfolio">
-      
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="section-title">
+              <h4>OUR PORTFOLIO</h4>
+              <h5>Proin iaculis purus consequat sem cure.</h5>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-img">
+                <img src="images/r1i1.jpg" alt="image">
+              </div>
+              <div class="card-text">
+                <h6>Ebony & Ivory</h6>
+                <p>Branding</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-img">
+                <img src="images/r1i2.jpg" alt="image">
+              </div>
+              <div class="card-text">
+                <h6>Smart Stationary</h6>
+                <p>Print Design</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-img">
+                <img src="images/r1i3.jpg" alt="image">
+              </div>
+              <div class="card-text">
+                <h6>Clever Poster</h6>
+                <p>Print Design</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-img">
+                <img src="images/r2i1.jpg" alt="image">
+              </div>
+              <div class="card-text">
+                <h6>Vinyl Record</h6>
+                <p>Product Mock-Up</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-img">
+                <img src="images/r2i2.jpg" alt="image">
+              </div>
+              <div class="card-text">
+                <h6>Treehouse Template</h6>
+                <p>Web Design</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-img">
+                <img src="images/r2i3.jpg" alt="image">
+              </div>
+              <div class="card-text">
+                <h6>Burned Logo</h6>
+                <p>Branding</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="footer-text">
+              <p class="footer-text"><i class="far fa-copyright"></i>Harbinger Ltd.</p>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="footer-icons">
+              <ul class="footer-list">
+                <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
+                <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
+                <li><a href="#"><i class="fab fa-pinterest"></i>Pinterest</a></li>
+                <li><a href="#"><i class="fab fa-google-plus-g"></i>Google</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
