--- a/index.html
+++ b/index.html
@@ -5,32 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golden Studio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Muli:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital@1&family=Palanquin:wght@300&family=Romanesco&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="vendor/bootstrap-grid.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="splash">
-      <nav class="container">
-        <div class="row">
-          <div class="logo col-6">
-            <h1>Golden</h1>
+    <header class="overlay">
+      <div class="splash">
+        <nav class="container">
+          <div class="row">
+            <div class="logo col-6">
+              <h1>Golden</h1>
+            </div>
+            <div class="menu col-6">
+              <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">CONTACT</a></li>
+              </ul>
+            </div>
           </div>
-          <div class="nav col-6">
-            <ul>
-              <li><a href="#">HOME</a></li>
-              <li><a href="#">SERVICES</a></li>
-              <li><a href="#">PORTFOLIO</a></li>
-              <li><a href="#">ABOUT</a></li>
-              <li><a href="#">CONTACT</a></li>
-            </ul>
-          </div>
+        </nav>
+        <div class="splash-inner">
+          <h3>Welcome To Our Studio!</h3>
+          <h2>IT'S NICE TO MEET YOU</h2>
+          <button class="btn" type="button">TELL ME MORE</button>
         </div>
-      </nav>
-      <div class="splash-inner">
-        <h3>Welcome To Our Studio!</h3>
-        <h2>IT'S NICE TO MEET YOU</h2>
-        <button class="btn" type="button">TELL ME MORE</button>
       </div>
     </header>
 
@@ -85,7 +87,7 @@
               </div>
               <div class="card-text">
                 <h6>Ebony & Ivory</h6>
-                <p>Branding</p>
+                <h5>Branding</h5>
               </div>
             </div>
           </div>
@@ -96,7 +98,7 @@
               </div>
               <div class="card-text">
                 <h6>Smart Stationary</h6>
-                <p>Print Design</p>
+                <h5>Print Design</h5>
               </div>
             </div>
           </div>
@@ -107,7 +109,7 @@
               </div>
               <div class="card-text">
                 <h6>Clever Poster</h6>
-                <p>Print Design</p>
+                <h5>Print Design</h5>
               </div>
             </div>
           </div>
@@ -120,7 +122,7 @@
               </div>
               <div class="card-text">
                 <h6>Vinyl Record</h6>
-                <p>Product Mock-Up</p>
+                <h5>Product Mock-Up</h5>
               </div>
             </div>
           </div>
@@ -131,7 +133,7 @@
               </div>
               <div class="card-text">
                 <h6>Treehouse Template</h6>
-                <p>Web Design</p>
+                <h5>Web Design</h5>
               </div>
             </div>
           </div>
@@ -142,7 +144,7 @@
               </div>
               <div class="card-text">
                 <h6>Burned Logo</h6>
-                <p>Branding</p>
+                <h5>Branding</h5>
               </div>
             </div>
           </div>
@@ -155,16 +157,16 @@
         <div class="row">
           <div class="col-md-4">
             <div class="footer-text">
-              <p class="footer-text"><i class="far fa-copyright"></i>Harbinger Ltd.</p>
+              <p><i class="far fa-copyright"></i>Copyright 2014 FreebiesXpress.com</p>
             </div>
           </div>
           <div class="col-md-8">
-            <div class="footer-icons">
-              <ul class="footer-list">
-                <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
-                <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
-                <li><a href="#"><i class="fab fa-pinterest"></i>Pinterest</a></li>
-                <li><a href="#"><i class="fab fa-google-plus-g"></i>Google</a></li>
+            <div class="footer-links">
+              <ul class="footer-icons">
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
               </ul>
             </div>
           </div>
