--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <p><i class="far fa-copyright"></i>Copyright 2014 FreebiesXpress.com</p>
             </div>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-4">
             <div class="footer-links">
               <ul class="footer-icons">
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -169,6 +169,8 @@
                 <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
               </ul>
             </div>
+          </div>
+          <div class="blank col-md-4">
           </div>
         </div>
       </div>
