Edit portfolio section styles in order to fix problem with .card-text class width

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 offset-md-0">
+          <div class="col-md-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r1i1.jpg" alt="image">
@@ -91,7 +91,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 offset-md-0">
+          <div class="col-md-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r1i2.jpg" alt="image">
@@ -102,7 +102,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 offset-md-0">
+          <div class="col-md-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r1i3.jpg" alt="image">
@@ -113,9 +113,7 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 offset-md-0">
+          <div class="col-md-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r2i1.jpg" alt="image">
@@ -126,7 +124,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 offset-md-0">
+          <div class="col-md-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r2i2.jpg" alt="image">
@@ -137,7 +135,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 offset-md-0">
+          <div class="col-md-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r2i3.jpg" alt="image">
