--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <div class="splash">
         <nav class="container">
           <div class="row">
-            <div class="logo col-6">
+            <div class="logo col-12 col-md-6">
               <h1>Golden</h1>
             </div>
-            <div class="menu col-6">
+            <div class="menu col-12 col-md-6">
               <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">SERVICES</a></li>
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r1i1.jpg" alt="image">
@@ -91,7 +91,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r1i2.jpg" alt="image">
@@ -102,7 +102,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r1i3.jpg" alt="image">
@@ -113,7 +113,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r2i1.jpg" alt="image">
@@ -124,7 +124,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r2i2.jpg" alt="image">
@@ -135,7 +135,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-img">
                 <img src="images/r2i3.jpg" alt="image">
@@ -153,12 +153,12 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <div class="footer-text">
               <p><i class="far fa-copyright"></i>Copyright 2014 FreebiesXpress.com</p>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-12 col-md-4">
             <div class="footer-links">
               <ul class="footer-icons">
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -168,7 +168,7 @@
               </ul>
             </div>
           </div>
-          <div class="blank col-md-4">
+          <div class="blank col-12 col-md-4">
           </div>
         </div>
       </div>
